--- a/crediental-site/app/index.html
+++ b/crediental-site/app/index.html
@@ -56,6 +56,7 @@
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/jquery-validation/dist/jquery.validate.js"></script>
+    <script src="bower_components/notie/notie.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
