--- a/crediental-site/app/index.html
+++ b/crediental-site/app/index.html
@@ -30,12 +30,12 @@
       <div class="row">
         <div class="col-lg-6">
           <div id="links">
-            <h4>Choose</h4>
             <ul>
               <li><a href="#signup">Signup</a></li>
+              <li><a href="#password-lost">Password Lost</a></li>
             </ul>
           </div>
-          <div id="signup" class="hidden">
+          <div id="signup" class="subsection" style="display: none" >
             <h4>Sign up</h4>
             <form >
                 <label>Email *</label><input type="email" name="email" />
@@ -43,8 +43,22 @@
                 <input type="submit" value="signup" />
             </form>
           </div>
-
-
+          <div id="password-lost" class="subsection" style="display: none">
+            <h4>Password Lost</h4>
+            <form >
+                <label>Email *</label><input type="email" name="email" />
+                <input type="submit" value="password lost" />
+            </form>
+          </div>
+          <div id="reset-password" class="subsection" style="display: none">
+            <h4>Reset Password</h4>
+            <form >
+                <input type="hidden" name="email" />
+                <input type="hidden" name="token" />
+                <label>Password *</label><input type="password" name="password" />
+                <input type="submit" value="reset password" />
+            </form>
+          </div>
         </div>
       </div>
 
